[gd_scene load_steps=2 format=3 uid="uid://8l2i7tg7bfud"]

[ext_resource type="Script" path="res://Components/Carry/CarryComponent.gd" id="1_xewpf"]

[node name="CarryComponent" type="Area2D"]
collision_layer = 0
collision_mask = 12
monitorable = false
script = ExtResource("1_xewpf")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(0.15, 0.15)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
